fea: thumb layers keys

--- a/config/os/macos/hold/layers.dtsi
+++ b/config/os/macos/hold/layers.dtsi
@@ -5,3 +5,27 @@ to_mBAS_kp: to_mBAS_kp {
     flavor = "hold-preferred";
     bindings = <&to_mBAS>, <&kp>;
 };
+
+mo_mDEV_to_mBAS_kp: mo_mDEV_to_mBAS_kp {
+    compatible = "zmk,behavior-hold-tap";
+    #binding-cells = <2>;
+    tapping-term-ms = <HP_TAPPING>;
+    flavor = "hold-preferred";
+    bindings = <&mo_mDEV_to_mBAS>, <&kp>;
+}
+
+mo_mAXN_to_mBAS_kp: mo_mAXN_to_mBAS_kp {
+    compatible = "zmk,behavior-hold-tap";
+    #binding-cells = <2>;
+    tapping-term-ms = <HP_TAPPING>;
+    flavor = "hold-preferred";
+    bindings = <&mo_mAXN_to_mBAS>, <&kp>;
+}
+
+mo_mSTG_to_mBAS_kp: mo_mSTG_to_mBAS_kp {
+    compatible = "zmk,behavior-hold-tap";
+    #binding-cells = <2>;
+    tapping-term-ms = <HP_TAPPING>;
+    flavor = "hold-preferred";
+    bindings = <&mo_mSTG_to_mBAS>, <&kp>;
+}
