--- a/config/os/macos/morph/settings.dtsi
+++ b/config/os/macos/morph/settings.dtsi
@@ -1,11 +1,12 @@
-// tap:          zoom reset
-// shift:        zoom reset vscode
-mp_ma_zoom_reset: morph_mac_action_zoom_reset {
-    compatible = "zmk,behavior-mod-morph";
-    #binding-cells = <0>;
-    mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&kp RG(N0)>, <&kp RG(KP_N0)>;
-};
+// mp_mSTG_z
+MORPH_KS(
+    m,
+    STG,
+    z,
+    zoom,
+    &kp RG(N0),                 // tap:   zoom reset
+    &kp RG(KP_N0)               // shift: zoom reset vscode
+)
 
 // mp_mSTG_f
 MORPH_KS(
@@ -13,8 +14,8 @@ MORPH_KS(
     STG,
     f,
     files,
-    &kp LA(LG(SPACE)),  // tap:   finder
-    &kp LS(LG(DOT))     // shift: show/hide system files
+    &kp LA(LG(SPACE)),          // tap:   finder
+    &kp LS(LG(DOT))             // shift: show/hide system files
 )
 
 // mp_mSTG_screenshot
@@ -24,9 +25,9 @@ MORPH_KAS(
     screenshot,
     screenshot,
     MOD_LALT,
-    &kp RS(RG(N5)),  // tap:   screenshot and recording options
-    &kp RS(RG(N4)),  // alt:   screenshot of selected area
-    &kp RS(RG(N3))   // shift: screenshot of screen
+    &kp RS(RG(N5)),             // tap:   screenshot and recording options
+    &kp RS(RG(N4)),             // alt:   screenshot of selected area
+    &kp RS(RG(N3))              // shift: screenshot of screen
 )
 // ctrl: adding ctrl key copy to clipboard instead of saving a file
 
@@ -37,7 +38,7 @@ MORPH_KA(
     topleft,
     topleft,
     MOD_LALT,
-    &kp LS(LG(E)),              // tap:   ide: explorer
+    &kp LS(LG(E)),              // tap:   ide explorer
     &kp LS(LA(LG(LC(LEFT))))    // alt:   rectangle top left
 )
 
@@ -48,7 +49,7 @@ MORPH_KA(
     up,
     up,
     MOD_LALT,
-    &kp LS(LC(G)),              // tap:   ide: source control
+    &kp LS(LC(G)),              // tap:   ide source control
     &kp LS(LA(LG(UP)))          // alt:   rectangle top half
 )
 
@@ -59,7 +60,7 @@ MORPH_KA(
     topright,
     topright,
     MOD_LALT,
-    &kp LS(LG(D)),              // tap:   ide: debugger
+    &kp LS(LG(D)),              // tap:   ide debugger
     &kp LS(LA(LG(LC(RIGHT))))   // alt:   rectangle top right
 )
 
@@ -70,7 +71,7 @@ MORPH_KA(
     left,
     left,
     MOD_LALT,
-    &kp LG(B),                  // tap:   ide: toggle primary side bar 
+    &kp LG(B),                  // tap:   ide toggle primary side bar 
     &kp LA(LG(LS(LEFT)))        // alt:   rectangle left
 )
 
@@ -93,7 +94,7 @@ MORPH_KA(
     right,
     right,
     MOD_LALT,
-    &kp LA(LG(B)),              // tap:   ide: toggle secondary side bar 
+    &kp LA(LG(B)),              // tap:   ide toggle secondary side bar 
     &kp LA(LG(LS(RIGHT)))       // alt:   rectangle right
 )
 
@@ -115,7 +116,7 @@ MORPH_KA(
     down,
     down,
     MOD_LALT,
-    &kp LG(J),                 // tap:   ide: toggle panel bottom bar 
+    &kp LG(J),                 // tap:   ide toggle panel bottom bar 
     &kp LS(LA(LG(DOWN)))       // alt:   rectangle right
 )
 
@@ -131,7 +132,7 @@ MORPH_KA(
 )
 
 // mp_mSTG_m
-MORPH_KS(
+MORPH_KA(
     m,
     STG,
     m,
