--- a/config/os/macos/keys.dtsi
+++ b/config/os/macos/keys.dtsi
@@ -1,9 +1,7 @@
-/* Shared Keys */
-
 // tap:      escape       
 // long-tap: BAS layer
 // shift:    caps lock
-#define MKY_ESC  &mp_mk_ec
+#define MKY_ESC  &mp_mk_dev
 
 // tap: return
 // long-tap: F2 (easy rename on ide)
