fix: morf on mute key

--- a/config/os/macos/morph/settings.dtsi
+++ b/config/os/macos/morph/settings.dtsi
@@ -137,6 +137,7 @@ MORPH_KA(
     STG,
     m,
     mute,
+    MOD_LALT,
     &kp C_MUTE,                 // tap:   volume mute
     &kp LS(LA(LC(LG(M))))       // shift: mic mute
 )
