feat: add bluetooth configuration for macos

--- a/config/totem.conf
+++ b/config/totem.conf
@@ -15,6 +15,7 @@ CONFIG_ZMK_USB_LOGGING=n
 # https://zmk.dev/docs/config/battery#peripheral-battery-monitoring
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_BT_BAS=n
 
 # Key Chatter
 # https://zmk.dev/docs/features/debouncing
