--- a/config/boards/shields/totem/totem.dtsi
+++ b/config/boards/shields/totem/totem.dtsi
@@ -10,6 +10,7 @@
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
+        zmk,physical-layout = &physical_layout;
     };
 
     default_transform: keymap_transform_0 {
