--- a/config/os/android/morph/layers.dtsi
+++ b/config/os/android/morph/layers.dtsi
@@ -1,59 +1,59 @@
 // tap:      escape      
 // long-tap: to BAS layer
 // shift:    caps lock
-mp_mk_bas: morph_mac_key_bas_layer {
+mp_ak_bas: morph_android_key_bas_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&to_mBAS_kp 0 ESC>, <&cw_mCAPS>;
+    bindings = <&to_aBAS_kp 0 ESC>, <&cw_aCAPS>;
 };
 
 // tap:      right arrow       
 // long-tap: to DEV momentary
 // shift:    to DEV layer
-mp_mk_dev_right: morph_mac_key_dev_right_layer {
+mp_ak_dev_right: morph_android_key_dev_right_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&mo_mDEV_to_mBAS_kp 0 RIGHT>, <&to_mDEV>;
+    bindings = <&mo_aDEV_to_aBAS_kp 0 RIGHT>, <&to_aDEV>;
 };
 
 // tap:      tab       
 // long-tap: to AXN momentary
 // shift:    to AXN layer
-mp_mk_axn: morph_mac_key_axn_layer {
+mp_ak_axn: morph_android_key_axn_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&mo_mAXN_to_mBAS_kp 0 TAB>, <&to_mAXN>;
+    bindings = <&mo_aAXN_to_aBAS_kp 0 TAB>, <&to_aAXN>;
 };
 
 // tap:      backspace       
 // long-tap: to AXN momentary
 // shift:    to FNK layer
-mp_mk_fnk: morph_mac_key_fnk_layer {
+mp_ak_fnk: morph_android_key_fnk_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&mo_mAXN_to_mBAS_kp 0 BSPC>, <&to_mFNK>;
+    bindings = <&mo_aAXN_to_aBAS_kp 0 BSPC>, <&to_aFNK>;
 };
 
 // tap:      delete    
 // long-tap: to DEV momentary
 // shift:    to DEV layer
-mp_mk_dev_left: morph_mac_key_dev_left_layer {
+mp_ak_dev_left: morph_android_key_dev_left_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&mo_mDEV_to_mBAS_kp 0 DEL>, <&to_mDEV>;
+    bindings = <&mo_aDEV_to_aBAS_kp 0 DEL>, <&to_aDEV>;
 };
 
 // long-tap: to STG momentary
 // shift:    to STG layer
-mp_mk_stg: morph_mac_stg_layer {
+mp_ak_stg: morph_android_stg_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&mo_mSTG_to_mBAS>, <&to_mSTG>;
+    bindings = <&mo_aSTG_to_aBAS>, <&to_aSTG>;
 };
 
