--- a/config/os/windows/morph/layers.dtsi
+++ b/config/os/windows/morph/layers.dtsi
@@ -15,7 +15,7 @@ mp_wk_dev_right: morph_windows_key_dev_right_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&mo_mDEV_to_wBAS_kp 0 RIGHT>, <&to_wDEV>;
+    bindings = <&mo_wDEV_to_wBAS_kp 0 RIGHT>, <&to_wDEV>;
 };
 
 // tap:      tab       
@@ -25,7 +25,7 @@ mp_wk_axn: morph_windows_key_axn_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&mo_mAXN_to_wBAS_kp 0 TAB>, <&to_wAXN>;
+    bindings = <&mo_wAXN_to_wBAS_kp 0 TAB>, <&to_wAXN>;
 };
 
 // tap:      backspace       
@@ -35,7 +35,7 @@ mp_wk_fnk: morph_windows_key_fnk_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&mo_mAXN_to_wBAS_kp 0 BSPC>, <&to_wFNK>;
+    bindings = <&mo_wAXN_to_wBAS_kp 0 BSPC>, <&to_wFNK>;
 };
 
 // tap:      delete    
@@ -45,7 +45,7 @@ mp_wk_dev_left: morph_windows_key_dev_left_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&mo_mDEV_to_wBAS_kp 0 DEL>, <&to_wDEV>;
+    bindings = <&mo_wDEV_to_wBAS_kp 0 DEL>, <&to_wDEV>;
 };
 
 // long-tap: to STG momentary
@@ -54,6 +54,6 @@ mp_wk_stg: morph_windows_stg_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&mo_mSTG_to_wBAS>, <&to_wSTG>;
+    bindings = <&mo_wSTG_to_wBAS>, <&to_wSTG>;
 };
 
