--- a/config/os/android/macros/base.dtsi
+++ b/config/os/android/macros/base.dtsi
@@ -1,3 +1,12 @@
+cw_aCAPS: cw_aCAPS {
+    compatible = "zmk,behavior-macro";
+    #binding-cells = <0>;
+    tap-ms = <MC_TAP>;
+    bindings
+        = <&kp LS(H_wCWR)>
+        , <&kp CAPS>;
+};
+
 cw_aON: cw_aON {
     compatible = "zmk,behavior-macro";
     #binding-cells = <0>;
