--- a/config/os/shared/macros/settings.dtsi
+++ b/config/os/shared/macros/settings.dtsi
@@ -16,14 +16,14 @@ m_s_b3: macro_stg_bluetooth_3 {
     compatible = "zmk,behavior-macro";
     #binding-cells = <0>;
     bindings =
-        <&bt BT_SEL 2 &to_wBAS>;
+        <&bt BT_SEL 2 &to_mBAS>;
 };
 
 m_s_b4: macro_stg_bluetooth_4 {
     compatible = "zmk,behavior-macro";
     #binding-cells = <0>;
     bindings =
-        <&bt BT_SEL 3 &to_wBAS>;
+        <&bt BT_SEL 3 &to_mBAS>;
 };
 
 m_s_b5: macro_stg_bluetooth_5 {
