--- a/config/os/macos/hold/base.dtsi
+++ b/config/os/macos/hold/base.dtsi
@@ -1,5 +1,5 @@
-HR_HOLD(m, BAS, RS, mp_mi_n)  //hm_mBAS_RS
-HR_HOLD(m, BAS, RA, mp_mi_e)  //hm_mBAS_RA
-HR_HOLD(m, BAS, LC, mp_mi_a)  //hm_mBAS_LC
-HR_HOLD(m, BAS, RC, mp_mi_i)  //hm_mBAS_RC
-HR_HOLD(m, BAS, RG, mp_mi_o)  //hm_mBAS_RG
+HR_HOLD(BAS, RS, mp_mi_n)  //hm_BAS_RS
+HR_HOLD(BAS, RA, mp_mi_e)  //hm_BAS_RA
+HR_HOLD(BAS, LC, mp_mi_a)  //hm_BAS_LC
+HR_HOLD(BAS, RC, mp_mi_i)  //hm_BAS_RC
+HR_HOLD(BAS, RG, mp_mi_o)  //hm_BAS_RG
